# job-board-dj

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
accounts/: models.py
config/: elasticsearch.py  settings.py  urls.py
jobs/: models.py  search.py  search_service.py  signals.py  urls.py
jobs/management/commands/: reindex_elasticsearch.py
jobs/models/: Application.py  Company.py  Job.py  JobSkills.py  ProfileSkill.py  Skill.py  __init__.py
jobs/serializers/: ApplicationSerializer.py  CompanySerializer.py  JobSerializer.py  JobSkillSerializer.py  ProfileSkillSerializer.py  SkillSerializer.py
jobs/views/: __init__.py  application_viewset.py  company_viewset.py  job_viewset.py  jobskill_viewset.py  profileskill_viewset.py  skill_viewset.py
users/: models.py  serializers.py  urls.py  views.py
